<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color">

    <ImageView
        android:id="@+id/avatar"
...
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Caroline" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:paddingLeft="10dp"
...
